# gtk-rs-animation

./: Cargo.toml  README.md
gtk-animator/: Cargo.toml
gtk-animator/src/: and_then.rs  animator.rs  lib.rs  then.rs
src/: main.rs
